[metadata]
name = gpt4-interface
version = 0.1.0
description = Interface for GPT-4 API integration
long_description = file: README.md
long_description_content_type = text/markdown
author = AgentGPT Team
author_email = support@agent-gpt.org
url = https://agent-gpt.org
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0

[options.package_data]
* = *.md 